hphp/test/slow/traits/requireclass/requireclass_invalidreq_02.bad.php.expectf
Fatal error: Trait 'T' may only be used from 'I', but 'I' is not a class in %s/requireclass_invalidreq_02.bad.php on line 8
